fixed headers to use h1 for easy design readability

--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,11 @@
     font-variation-settings: "wdth" 100;
 }
 
+h1{
+    font-size: 1.3rem;
+    color: #49496D;
+}
+
 h2 {
     font-weight: 500;
     color: #49496D;
@@ -21,13 +26,11 @@ nav a{
 }
 
 /* HEADER */
-
 .headerContainer {
     display: flex;
-    padding: 20px;
+    padding: 10px;
     gap: 50px;
     background-color: white;
-    font-size: 1.2rem;
 }
 
 .headerContainer > nav a{
